added <p> in main

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 
     <main>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum sequi veritatis in dolore nam illum ex consectetur numquam dolorum, commodi consequatur ab molestias esse illo repudiandae voluptatem vero voluptates aliquam!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed atque beatae odit vel maiores adipisci impedit ipsum doloribus? Aliquam eligendi quis cupiditate ullam numquam suscipit iusto excepturi veniam optio! Similique, deserunt architecto eos est exercitationem fugiat soluta, a minus molestiae dolorem ea possimus eligendi recusandae quis fuga libero labore quo!</p>
     </main>
     
     <div>
         <p>Copyright 2023</p>
     </div>
+
+
 </body>
 </html>
